[package]
name = "doer"
version = "0.1.0"
edition = "2021"
authors = ["Bama"]
description = "A simple CLI tool to run commands in parallel"
repository = "https://github.com/ObamaTheLlama114/doer"
readme = "README.md"
license = "MIT"
keywords = ["cli", "parallel", "commands"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
clap = { version = "4.1.4", features = ["cargo"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["macros", "process", "rt-multi-thread"] }
toml = "0.6.0"
